# kubernetes-provisioner

./: .gitignore  README.md  Vagrantfile  e2e-test  kubernetes-provisioner.cabal  main.go
app/: Main.hs
src/: KubernetesProvisioner.hs
templates/: etcd.default  etcd.service  etcd.service~  kube-apiserver.default  kube-apiserver.service  kube-controller-manager.default  kube-controller-manager.service  kube-proxy.default  kube-proxy.service  kube-scheduler.default  kube-scheduler.service  kubelet.service
