name:                kubernetes-provisioner
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/kubernetes-provisioner#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2010 Author Here
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     KubernetesProvisioner
  build-depends:       base >= 4.7 && < 5
                     , turtle >= 1.2.0
  default-language:    Haskell2010

executable kubernetes-provisioner
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , kubernetes-provisioner
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/davidsiefert/kubernetes-provisioner
